# speaker-tracker

./: .gitignore
backend/: pyproject.toml
backend/src/: api_handler.py  app.py
backend/src/common/: .ruff.toml  auth.py  db.py  errors.py  http.py  logger.py  tz.py
backend/src/core/: .ruff.toml  funnel.py  opportunities.py  outreach.py  periods.py  research.py
backend/src/handlers/: catalogs.py  contact_organizations.py  contacts.py  context.py  dashboard.py  health.py  message_templates.py  migrate.py  opportunities.py  opportunity_contacts.py  opportunity_notes.py  organizations.py  outreaches.py  params.py  responses.py  talks.py  targets.py
backend/src/migrations/: 0001_initial.sql  0002_orgs_contacts.sql  0003_pipeline.sql  0004_remove_nurture.sql  0005_outreach.sql  0006_targets.sql  0007_target_labels.sql  runner.py
backend/src/models/: catalogs.py  contacts.py  dashboard.py  funnel.py  (+7 more)
backend/tests/: conftest.py  test_auth_guard.py  test_catalogs_repository.py  test_contacts_repository.py  test_context.py  test_dashboard_api.py  test_dashboard_repository.py  test_db.py  test_funnel.py  test_http.py  test_message_templates_api.py  test_message_templates_repository.py  test_migrate_handler.py  test_migration_runner.py  test_opportunities.py  test_opportunities_repository.py  test_organizations_repository.py  test_orgs_contacts_api.py  test_outreach.py  test_outreach_api.py  test_outreach_repository.py  test_periods.py  test_pipeline_api.py  test_research.py  test_talks_repository.py  test_targets_repository.py  test_timeline_repository.py  test_tz.py
(+87 files in other folders)
