[project]
name = "speaker-tracker-backend"
version = "0.1.0"
description = "Speaker Tracker — gig-acquisition CRM backend (AWS Lambda, Python 3.12, arm64)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aws-lambda-powertools[tracer]>=3,<4",
    "pydantic>=2,<3",
    "pymysql>=1.1,<2",
    "sqlparse>=0.5,<0.6",
    "boto3>=1.34",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[tool.uv]
package = false          # app, not a distributable wheel; src/ is copied into the bundle

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TID"]   # TID = flake8-tidy-imports (banned-api)